--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -6,6 +6,8 @@
     <%= f.input :author, required: true, label: false, placeholder: "Author"  %>
     <%= f.input :description, required: true, label: false, placeholder: "Description"  %>
     <%= f.input :price, required: true, label: false, placeholder: "Price"  %>
+    <%= f.input :image %>
+    <%= f.input :resource %>
 
     <div class="checkbox text-center">
     <%= f.input :availability, required: false%>
