--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,15 +8,20 @@
   <p class="justify"><%= @book.description %></p>
   <h4 class="text-left">$<%= @book.price.to_f / 100 %></h4>
 
-  <%= form_tag buy_path(slug: @book.slug) do %>
-	<script
-	    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-	    data-key= "<%= Rails.configuration.stripe[:publishable_key] %>"
-	    data-amount= "<%= @book.price%>"
-	    data-name= "eStuk"
-	    data-description= "<%= @book.name %>"
-	    data-email= "<%= current_user.email %>">
-	 </script>
+
+  <% if current_user %>
+	<%= form_tag buy_path(slug: @book.slug) do %>
+		<script
+		    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+		    data-key= "<%= Rails.configuration.stripe[:publishable_key] %>"
+		    data-amount= "<%= @book.price%>"
+		    data-name= "eStuk"
+		    data-description= "<%= @book.name %>"
+		    data-email= "<%= current_user.email %>">
+		</script>
+	<% end %>
+  <% else %>
+  	<p>Please Sign up or Login to buy</p>
   <% end %>
 </div>
 </div>
